1999-11-14  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* lib/clockoptions.cc (update): New function.
	(create_widget): Use the minimum value for update rate to display.

	* include/glclock.h (class clock_options_dialog): Add new member
 	update to class general_options_page.

	* lib/modaldialog.cc (act): Call update on window.

	* include/utils.h (struct options_page): Add new member update.

	* lib/options.cc: Move handle_ok and handle_cancel.
	(update): Invoke page callbacks.

	* lib/about.cc (handle_ok): Rewrote as non-static method.
	(deliver_ok): New function.
	(populate): Use deliver_ok for signal.

	* include/glclock.h (class about_dialog): Make method handle_ok
 	non-static.

	* lib/options.cc (deliver_ok, deliver_cancel): New functions.
	(populate): Use the new functions for signals.
	(handle_ok, handle_cancel): Rewrote as non-static member.

	* include/utils.h (class options_dialog): Make members handle_ok
 	and handle_cancel non-static.

	* lib/about.cc (create_widget): Removed.

	* lib/options.cc (create_widget): Removed.

	* include/utils.h (class options_dialog): Remove member
 	create_widget.
	* include/glclock.h (about_dialog): Likewise.

	* lib/modaldialog.cc (create_window): Replace code that used
 	create_widget.

	* include/utils.h (class modal_dialog): Make configure pure
 	virtual.  Remove member create_widget.

	* lib/options.cc (update, configure): New functions.
	(populate): Change the argument type.
	(create_widget): Use configure.

	* include/utils.h (class options_dialog): Add new members
 	configure and update.  Change the argument type of populate.

	* lib/about.cc (populate): Change the argument type.
	(configure): New function.
	(create_widget): Use configure.

	* include/glclock.h (class about_dialog): Add new member
 	configure.  Change the argument type of populate.

	* Makefile.am (SUBDIRS): Move po to the end.

	* include/utils.h (class modal_dialog): Rename populate to
 	configure.  Add new member update.
