@@ -2,7 +2,7 @@
 
 EXTRA_DIST = README.ja MEMO.ja VERSION-ID
 
-SUBDIRS = intl include lib bin po
+SUBDIRS = intl include lib bin doc po
 
 update-po:
 	cd po && ${MAKE} update-po
