@@ -1,0 +1,61 @@
+<?xml version="1.0"?>
+<!DOCTYPE book PUBLIC "-//Norman Walsh//DTD DocBk XML V3.1.3//EN"
+          "http://nwalsh.com/docbook/xml/3.1.3/docbookx.dtd">
+<book>
+  <title>rglclock</title>
+  <bookinfo>
+    <title>rglclock</title>
+    <subtitle>Rotating 3D Clock Program</subtitle>
+    <author>
+      <firstname>Kaz</firstname>
+      <surname>Sasayama</surname>
+    </author>
+    <abstract>
+      <para>
+	This file documents rglclock.
+      </para>
+    </abstract>
+    <!-- $Format: "<date>$Date$</date>" $ -->
+<date>Mon, 15 Nov 1999 22:26:15 +0900</date>
+    <copyright>
+      <year>1999</year>
+      <holder>Hypercore Software Design, Ltd</holder>
+    </copyright>
+  </bookinfo>
+  <chapter>
+    <title>Using rglclock</title>
+    <para>
+      rglclock is a rotating 3D clock program using Mesa/OpenGL and GTK+.
+    </para>
+  </chapter>
+  <chapter>
+    <title>Command Reference</title>
+    <refentry>
+      <refmeta>
+	<refentrytitle>rglclock</refentrytitle>
+	<manvolnum>1</manvolnum>
+      </refmeta>
+      <refnamediv>
+	<refname>rglclock</refname>
+	<refpurpose>display a rotating 3D clock</refpurpose>
+      </refnamediv>
+      <refsynopsisdiv>
+	<para>
+	  rglclock
+	</para>
+      </refsynopsisdiv>
+      <refsect1>
+	<title>Description</title>
+	<para>rglclock displays a rotating 3D clock.</para>
+      </refsect1>
+    </refentry>
+  </chapter>
+  <chapter>
+    <title>rglclock Internals</title>
+    <abstract>
+      <para>
+	This chapter describes the internals of rglclock.
+      </para>
+    </abstract>
+  </chapter>
+</book>
